--- a/templates/app5.yaml
+++ b/templates/app5.yaml
@@ -18,7 +18,7 @@ spec:
         app: app5
     spec:
       nodeSelector:
-        agentpool: agentpool
+        agentpool: nodepool1
       containers:
       - image: amarbessalah/snat-app:v5
         name: snat-app
