--- a/templates/app7.yaml
+++ b/templates/app7.yaml
@@ -18,7 +18,7 @@ spec:
         app: app7
     spec:
       nodeSelector:
-        agentpool: agentpool
+        agentpool: nodepool1
       containers:
       - image: amarbessalah/snat-app:v7
         name: snat-app
